--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -34,19 +34,15 @@
   <uses-feature android:name="android.hardware.camera.any"/>
   <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
   <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
-  <uses-feature android:name="android.hardware.screen.landscape"/>
+  <uses-feature android:name="android.hardware.screen.portrait"/>
   <uses-feature android:name="android.hardware.wifi" android:required="false"/>
 
-  <application android:label="@string/app_name"
-               android:allowBackup="true">
+  <application android:allowBackup="true">
     <activity android:name=".CaptureActivity"
               android:clearTaskOnLaunch="true"
               android:stateNotNeeded="true"
               android:theme="@style/CaptureTheme"
               android:windowSoftInputMode="stateAlwaysHidden">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-      </intent-filter>
       <intent-filter>
         <action android:name="com.google.zxing.client.android.SCAN"/>
         <category android:name="android.intent.category.DEFAULT"/>
@@ -86,12 +82,6 @@
         <action android:name="com.google.zxing.client.android.ENCODE"/>
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
-      <!-- This allows us to handle the Share button in Contacts. -->
-      <intent-filter>
-        <action android:name="android.intent.action.SEND"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-        <data android:mimeType="text/x-vcard"/>
-      </intent-filter>
       <!-- This allows us to handle sharing any plain text . -->
       <intent-filter>
         <action android:name="android.intent.action.SEND"/>
@@ -99,31 +89,8 @@
         <data android:mimeType="text/plain"/>
       </intent-filter>
     </activity>
-    <activity android:name=".book.SearchBookContentsActivity"
-              android:label="@string/sbc_name"
-              android:stateNotNeeded="true"
-              android:screenOrientation="sensorLandscape">
-      <intent-filter>
-        <action android:name="com.google.zxing.client.android.SEARCH_BOOK_CONTENTS"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-      </intent-filter>
-    </activity>
-    <activity android:name=".share.ShareActivity"
-              android:stateNotNeeded="true"
-              android:screenOrientation="user">
-      <intent-filter>
-        <action android:name="com.google.zxing.client.android.SHARE"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-      </intent-filter>
-    </activity>
     <activity android:name=".history.HistoryActivity"
               android:label="@string/history_title"
-              android:stateNotNeeded="true"/>
-    <activity android:name=".share.BookmarkPickerActivity"
-              android:label="@string/bookmark_picker_name"
-              android:stateNotNeeded="true"/>
-    <activity android:name=".share.AppPickerActivity"
-              android:label="@string/app_picker_name"
               android:stateNotNeeded="true"/>
   </application>
 
